# Adaptera

./: CHANGELOGS.MD  CONTRIBUTING.md  README.md  Things to do.md  memory.index  memory_meta.pkl  pyproject.toml  test.py  test2.py
adaptera/: __init__.py  about.py
adaptera/adapters/: __init__.py  lora.py
adaptera/chains/: __init__.py  agent.py  base.py  multiagent.py  router.py
adaptera/experimental/: __init__.py  experimental_agent.py  multiagent.py
adaptera/experimental/agent_helpers/: planner.py  scheduler.py
adaptera/memory/: __init__.py  base.py  core.py
adaptera/model/: __init__.py  core.py
adaptera/models/: __init__.py  api.py  base.py  hf.py
adaptera/prompts/: __init__.py  template.py
adaptera/tools/: __init__.py  core.py  registry.py
adaptera/utils/: __init__.py  types.py
tests/: __init__.py
